@@ -3,6 +3,7 @@ package com.kilometer.domain.archive.domain.userVisitPlace;
 import com.kilometer.domain.archive.exception.ArchiveValidationException;
 import com.kilometer.domain.archive.userVisitPlace.UserVisitPlaceEntity;
 import lombok.Getter;
+import org.junit.platform.commons.util.StringUtils;
 
 @Getter
 public class UserVisitPlace {
@@ -23,17 +24,17 @@ public class UserVisitPlace {
     public static UserVisitPlace createUserVisitPlace(final String placeType, final String placeName,
                                                       final String address, final String roadAddress) {
         validate(placeName, address, roadAddress);
-        return new UserVisitPlace(PlaceType.valueOf(placeType), placeName, address, roadAddress);
+        return new UserVisitPlace(PlaceType.findBy(placeType), placeName, address, roadAddress);
     }
 
     private static void validate(final String placeName, final String address, final String roadAddress) {
-        if (placeName == null || placeName.isBlank()) {
+        if (StringUtils.isBlank(placeName)) {
             throw new ArchiveValidationException("입력된 장소명이 없습니다.");
         }
-        if (address == null || address.isBlank()) {
+        if (StringUtils.isBlank(address)) {
             throw new ArchiveValidationException("입력된 지번 주소가 없습니다.");
         }
-        if (roadAddress == null || roadAddress.isBlank()) {
+        if (StringUtils.isBlank(roadAddress)) {
             throw new ArchiveValidationException("입력된 도로명 주소가 없습니다.");
         }
     }
